--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ scikit-learn>=1.1.2
 matplotlib>=3.5.1
 pillow>=9.1.0
 plotly>=5.7.0
+xlrd>=2.0.1
 torch>=1.12.1
 torchvision>=0.13.1
 skorch>=0.11.0
