--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,13 @@ notebook>=6.4.10
 numpy>=1.22.3
 pandas>=1.4.2
 scipy>=1.8.0
-scikit-learn>=1.1.2
+scikit-learn>=1.2.0
 matplotlib>=3.5.1
 pillow>=9.1.0
 plotly>=5.7.0
 xlrd>=2.0.1
+requests>=2.27.1
+fastapi[all]>=0.89.0
 torch>=1.12.1
 torchvision>=0.13.1
 skorch>=0.11.0
