--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 ipython>=8.2.0
-notebook>=6.4.10
+notebook~=6.5.6
 numpy>=1.22.3
 matplotlib>=3.5.1
 pandas>=1.4.2
@@ -11,6 +11,3 @@ plotly>=5.7.0
 xlrd>=2.0.1
 requests>=2.27.1
 fastapi[all]>=0.89.0
-torch>=1.12.1
-torchvision>=0.13.1
-skorch>=0.11.0
