--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "matplotlib >=3.7.2",
-    "notebook ~=6.5",
-    "numpy >=1.22.3,<2",
-    "pandas >=1.4.2,<3",
+    "matplotlib>=3.7.2",
+    "notebook~=6.5",
+    "numpy>=1.22.3,<2",
+    "pandas>=1.4.2,<3",
+    "seaborn>=0.13.2",
     "scipy>=1.8.0",
     "scikit-learn>=1.2.0",
     "joblib>=1.2.0",
